--- a/odoo/odoo/config/odoo.conf
+++ b/odoo/odoo/config/odoo.conf
@@ -8,6 +8,7 @@ dev_mode = True
 xmlrpc_port = 8069
 xmlrpc_interface = 0.0.0.0
 netrpc_interface = 0.0.0.0
+http_interface = 0.0.0.0
 
 data_dir = /var/lib/odoo
 logfile = /var/log/odoo/odoo.log
