--- a/odoo/scratch/config/odoo.conf
+++ b/odoo/scratch/config/odoo.conf
@@ -1,10 +1,11 @@
 [options]
 addons_path = /mnt/extra-addons
-db_host = odoo-db
+db_host = odoo-db-local
 db_user = odoo
 admin_passwd = siisi321
 db_password = odoo
-dev_mode = True
+
+proxy_mode = True
 
 xmlrpc_port = 8069
 xmlrpc_interface = 0.0.0.0
@@ -12,4 +13,4 @@ netrpc_interface = 0.0.0.0
 http_interface = 0.0.0.0
 
 data_dir = /var/lib/odoo
-logfile = /var/log/odoo/odoo/logs/odoo.log
+logfile = /var/log/odoo/scratch/logs/odoo.log
