--- a/odoo/scratch/docker-compose.yml
+++ b/odoo/scratch/docker-compose.yml
@@ -1,7 +1,7 @@
 # /home/siisi/super/odoo/scratch/docker-compose.yml
 
 services:
-  db:
+  odoo_db_local:
     image: postgres:latest
     container_name: odoo-db-local
     environment:
@@ -22,7 +22,7 @@ services:
       retries: 5
       timeout: 5s
 
-  odoo16:
+  odoo16_local:
     image: odoo:16.0
     container_name: odoo16-web-local
     environment:
@@ -45,10 +45,10 @@ services:
       - postgresql_password
     restart: always
     depends_on:
-      db:
+      odoo_db_local:
         condition: service_healthy
 
-  odoo17:
+  odoo17_local:
     image: odoo:17.0
     container_name: odoo17-web-local
     environment:
@@ -71,10 +71,10 @@ services:
       - postgresql_password
     restart: always
     depends_on:
-      db:
+      odoo_db_local:
         condition: service_healthy
 
-  odoo18:
+  odoo18_local:
     image: odoo:18.0
     container_name: odoo18-web-local
     environment:
@@ -97,49 +97,23 @@ services:
       - postgresql_password
     restart: always
     depends_on:
-      db:
+      odoo_db_local:
         condition: service_healthy
 
-  odoo_the:
+  gestion_local:
     image: odoo:latest
-    container_name: odoo-the-web-local
+    container_name: gestion-web-local
     environment:
       - VIRTUAL_PORT=8069
       - HOST=odoo-db-local
       - POSTGRES_USER=odoo
       - POSTGRES_PASSWORD_FILE=/run/secrets/postgresql_password
-      - DB_NAME=odoo_the_local
-      - ADDONS_PATH=/mnt/extra-addons,/usr/lib/python3/site-packages/odoo/addons
-    ports:
-      - "8012:8069"
-    volumes:
-      - odoo-the-web-data-local:/var/lib/odoo
-      - ./config:/etc/odoo
-      - ./addons:/mnt/extra-addons
-      - ./logs:/var/log/odoo/scratch/logs
-    networks:
-      - odoo-network-local
-    secrets:
-      - postgresql_password
-    restart: always
-    depends_on:
-      db:
-        condition: service_healthy
-
-  odoo_gestion:
-    image: odoo:latest
-    container_name: odoo-gestion-web-local
-    environment:
-      - VIRTUAL_PORT=8069
-      - HOST=odoo-db-local
-      - POSTGRES_USER=odoo
-      - POSTGRES_PASSWORD_FILE=/run/secrets/postgresql_password
-      - DB_NAME=odoo_gestion_local
+      - DB_NAME=gestion_local
       - ADDONS_PATH=/mnt/extra-addons,/usr/lib/python3/site-packages/odoo/addons
     ports:
       - "8011:8069"
     volumes:
-      - odoo-gestion-web-data-local:/var/lib/odoo
+      - gestion-web-data-local:/var/lib/odoo
       - ./config:/etc/odoo
       - ./addons:/mnt/extra-addons
       - ./logs:/var/log/odoo/scratch/logs
@@ -149,23 +123,49 @@ services:
       - postgresql_password
     restart: always
     depends_on:
-      db:
+      odoo_db_local:
         condition: service_healthy
 
-  odoo_super:
+  dbt_local:
     image: odoo:latest
-    container_name: odoo-super-web-local
+    container_name: dbt-web-local
     environment:
       - VIRTUAL_PORT=8069
       - HOST=odoo-db-local
       - POSTGRES_USER=odoo
       - POSTGRES_PASSWORD_FILE=/run/secrets/postgresql_password
-      - DB_NAME=odoo_super_local
+      - DB_NAME=dbt_local
+      - ADDONS_PATH=/mnt/extra-addons,/usr/lib/python3/site-packages/odoo/addons
+    ports:
+      - "8012:8069"
+    volumes:
+      - dbt-web-data-local:/var/lib/odoo
+      - ./config:/etc/odoo
+      - ./addons:/mnt/extra-addons
+      - ./logs:/var/log/odoo/scratch/logs
+    networks:
+      - odoo-network-local
+    secrets:
+      - postgresql_password
+    restart: always
+    depends_on:
+      odoo_db_local:
+        condition: service_healthy
+
+  evolution_local:
+    image: odoo:latest
+    container_name: evolution-web-local
+    environment:
+      - VIRTUAL_PORT=8069
+      - HOST=odoo-db-local
+      - POSTGRES_USER=odoo
+      - POSTGRES_PASSWORD_FILE=/run/secrets/postgresql_password
+      - DB_NAME=evolution_local
       - ADDONS_PATH=/mnt/extra-addons,/usr/lib/python3/site-packages/odoo/addons
     ports:
       - "8013:8069"
     volumes:
-      - odoo-super-web-data-local:/var/lib/odoo
+      - evolution-web-data-local:/var/lib/odoo
       - ./config:/etc/odoo
       - ./addons:/mnt/extra-addons
       - ./logs:/var/log/odoo/scratch/logs
@@ -175,23 +175,23 @@ services:
       - postgresql_password
     restart: always
     depends_on:
-      db:
+      odoo_db_local:
         condition: service_healthy
 
-  odoo_latest:
+  medusa_local:
     image: odoo:latest
-    container_name: odoo-latest-web-local
+    container_name: medusa-web-local
     environment:
       - VIRTUAL_PORT=8069
       - HOST=odoo-db-local
       - POSTGRES_USER=odoo
       - POSTGRES_PASSWORD_FILE=/run/secrets/postgresql_password
-      - DB_NAME=odoo_latest_local
+      - DB_NAME=medusa_local
       - ADDONS_PATH=/mnt/extra-addons,/usr/lib/python3/site-packages/odoo/addons
     ports:
       - "8015:8069"
     volumes:
-      - odoo-latest-web-data-local:/var/lib/odoo
+      - medusa-web-data-local:/var/lib/odoo
       - ./config:/etc/odoo
       - ./addons:/mnt/extra-addons
       - ./logs:/var/log/odoo/scratch/logs
@@ -201,7 +201,7 @@ services:
       - postgresql_password
     restart: always
     depends_on:
-      db:
+      odoo_db_local:
         condition: service_healthy
 
 volumes:
@@ -209,10 +209,10 @@ volumes:
   odoo16-web-data-local:
   odoo17-web-data-local:
   odoo18-web-data-local:
-  odoo-the-web-data-local:
-  odoo-gestion-web-data-local:
-  odoo-super-web-data-local:
-  odoo-latest-web-data-local:
+  gestion-web-data-local:
+  dbt-web-data-local:
+  evolution-web-data-local:
+  medusa-web-data-local:
 
 secrets:
   postgresql_password:
